<?xml version="1.0" encoding="utf-8"?>

<!--parent container-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

   <!-- toolbar-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!--scrollview-->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <!--scrollview's child (container of all UI elements)-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--UI elements-->
            <!--title-->
            <TextView
                android:id="@+id/account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/application_name"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.486" />

    <!--subtitle-->
    <TextView
        android:id="@+id/account_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fName lName"
        app:layout_constraintBottom_toBottomOf="@+id/account_title"
        app:layout_constraintEnd_toEndOf="@+id/account_title"
        app:layout_constraintTop_toBottomOf="@+id/account_title" />

    <!--guideline-->
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

            <!--heading-->
            <TextView
                android:id="@+id/heading_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/account_personal_info"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <!--heading-->
    <TextView
        android:id="@+id/heading_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/account_activity"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_password" />


    <!--name label-->
    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/account_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_personal_info" />

    <!--email label-->
    <TextView
        android:id="@+id/account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/account_email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name" />

    <!--name content-->
    <TextView
        android:id="@+id/account_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="fName lName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/heading_personal_info" />

    <!--email content-->
    <TextView
        android:id="@+id/account_email_content"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="email@email.com"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/account_email"
        app:layout_constraintTop_toBottomOf="@+id/account_name_content" />


    <!--change password button-->
    <Button
        android:id="@+id/account_password"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_secondary_action"
        android:text="@string/account_change_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_email_content" />

    <!--my attractions button-->
    <Button
        android:id="@+id/account_my_attractions_button"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_secondary_action"
        android:text="@string/account_my_attractions"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_activity" />

    <!--my reviews button-->
    <Button
        android:id="@+id/account_my_reviews_button"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_secondary_action"
        android:text="@string/account_my_reviews"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_my_attractions_button" />

        <!--sign out button-->
        <Button
            android:id="@+id/account_sign_out"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="128dp"
            android:background="@drawable/button_main_action"
            android:text="@string/account_sign_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_my_reviews_button"
            app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
