<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:animateLayoutChanges="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/application_name"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_new_account"
                app:layout_constraintBottom_toBottomOf="@+id/register_title"
                app:layout_constraintEnd_toEndOf="@+id/register_title"
                app:layout_constraintTop_toBottomOf="@+id/register_title" />

            <EditText
                android:id="@+id/register_fName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="First Name"
                android:paddingStart="25sp"
                android:textSize="25sp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <EditText
                android:id="@+id/register_lName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Last Name"
                android:paddingStart="25sp"
                android:textSize="25sp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fName" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Email"
                android:paddingStart="25sp"
                android:textSize="25sp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_lName" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Password"
                android:paddingStart="25sp"
                android:textSize="25sp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_email" />

            <EditText
                android:id="@+id/register_passwordConfirm"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Confirm Password"
                android:paddingStart="25sp"
                android:textSize="25sp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_password" />


            <Button
                android:id="@+id/register_registerBtn"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_main_action"
                android:text="@string/txt_register_btn"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_passwordConfirm" />

            <ProgressBar
                android:id="@+id/register_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="68dp"
                android:layout_height="63dp"
                app:layout_constraintBottom_toBottomOf="@+id/register_registerBtn"
                app:layout_constraintEnd_toEndOf="@+id/register_registerBtn"
                app:layout_constraintStart_toStartOf="@+id/register_registerBtn"
                app:layout_constraintTop_toTopOf="@+id/register_registerBtn" />

            <Button
                android:id="@+id/register_loginBtn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_secondary_action"
                android:text="@string/txt_login_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/register_guestBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_registerBtn" />

            <Button
                android:id="@+id/register_guestBtn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_secondary_action"
                android:text="@string/txt_guest_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_loginBtn"
                tools:layout_marginBottom="64dp"
                tools:layout_marginTop="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>