<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/application_name"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cp_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_change_password"
                app:layout_constraintBottom_toBottomOf="@+id/cp_title"
                app:layout_constraintEnd_toEndOf="@+id/cp_title"
                app:layout_constraintTop_toBottomOf="@+id/cp_title" />


            <android.support.constraint.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <EditText
                android:id="@+id/cp_old_password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Old Password"
                android:inputType="textPassword"
                android:paddingStart="25sp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <EditText
                android:id="@+id/cp_new_password"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="New Password"
                android:inputType="textPassword"
                android:paddingStart="25sp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cp_old_password" />


            <EditText
                android:id="@+id/cp_conf_new_password"
                android:layout_width="320dp"
                android:layout_height="62dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:hint="Confirm New Password"
                android:inputType="textPassword"
                android:paddingStart="25sp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cp_new_password" />

            <Button
                android:id="@+id/cp_submitBtn"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_main_action"
                android:text="@string/submit_review"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cp_conf_new_password"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/cp_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="68dp"
                android:layout_height="63dp"
                app:layout_constraintBottom_toBottomOf="@+id/cp_submitBtn"
                app:layout_constraintEnd_toEndOf="@+id/cp_submitBtn"
                app:layout_constraintStart_toStartOf="@+id/cp_submitBtn"
                app:layout_constraintTop_toTopOf="@+id/cp_submitBtn" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>